adding easiest express server

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
+    "server": "node server/server.js",
     "ng": "node ./node_modules/@angular/cli/bin/ng",
     "start": "node ./node_modules/@angular/cli/bin/ng serve",
     "build": "node ./node_modules/@angular/cli/bin/ng build",
@@ -22,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
+    "express": "^4.15.3",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
