--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
-    "server": "node server/server.js",
+    "start": "node server/server.js",
     "ng": "node ./node_modules/@angular/cli/bin/ng",
-    "start": "node ./node_modules/@angular/cli/bin/ng serve",
+    "serve": "node ./node_modules/@angular/cli/bin/ng serve",
     "build": "node ./node_modules/@angular/cli/bin/ng build",
+    "build-watch": "node ./node_modules/@angular/cli/bin/ng build -w",
     "test": "node ./node_modules/@angular/cli/bin/ng test",
     "lint": "node ./node_modules/@angular/cli/bin/ng lint",
     "e2e": "node ./node_modules/@angular/cli/bin/ng e2e"
@@ -23,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
+    "ejs": "^2.5.6",
     "express": "^4.15.3",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
