--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "serve": "node ./node_modules/@angular/cli/bin/ng serve",
     "build": "node ./node_modules/@angular/cli/bin/ng build",
     "build-watch": "node ./node_modules/@angular/cli/bin/ng build -w",
-    "test": "node ./node_modules/@angular/cli/bin/ng test",
+    "test": "node ./node_modules/jest/bin/jest.js",
     "lint": "node ./node_modules/@angular/cli/bin/ng lint",
     "e2e": "node ./node_modules/@angular/cli/bin/ng e2e",
     "prepush": "yarn run lint && yarn run test"
@@ -38,19 +38,9 @@
     "@angular/cli": "1.2.0",
     "@angular/compiler-cli": "^4.0.0",
     "@angular/language-service": "^4.0.0",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.0.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "jest": "^20.0.4",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
     "typescript": "~2.3.3"
